# APTs-Adversary-Simulation

./: README.md
Iranian APT/Charming Kitten/: README.md
Iranian APT/Static Kitten/:  Actual_Payload_HTTP_XOR.cpp  Cybersecurity.docm  README.md  macros.bas
Iranian APT/Static Kitten/RustyWater/: README.md  build.sh
Iranian APT/Static Kitten/RustyWater/dropper/: Cargo.toml
Iranian APT/Static Kitten/RustyWater/dropper/src/: main.rs
Iranian APT/Static Kitten/RustyWater/reddit/: Cargo.toml  encrypt.py
Iranian APT/Static Kitten/RustyWater/reddit/src/: main.rs
North Koreans APT/Famous Chollima/: README.md
