[package]
name = "reddit"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = [
    "winreg", "winnt", "minwindef", "handleapi", "tlhelp32",
    "memoryapi", "processthreadsapi", "errhandlingapi", "synchapi",
    "sysinfoapi", "debugapi"
] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
